--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.3
 appnope==0.1.0
+beautifulsoup4==4.5.3
+bs4==0.0.1
 click==6.7
 decorator==4.0.11
 Flask==0.12.1
@@ -9,6 +11,7 @@ ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.10.2
 Jinja2==2.9.6
+lxml==3.7.3
 MarkupSafe==1.0
 packaging==16.8
 pexpect==4.2.1
@@ -17,6 +20,7 @@ prompt-toolkit==1.0.14
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.2.0
+requests==2.13.0
 simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.1.9
